--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@ nav li {
     <div class="contact-info">
       <h3>Contact Information:</h3>
       <ul>
-        <li>Email: [Your Email Address]</li>
-        <li>Phone: [Your Phone Number]</li>
-        <li>LinkedIn: <a href="[Your LinkedIn Profile URL]" target="_blank">[Your LinkedIn Profile URL]</a></li>
+        <li>Email: zuber.masalikar@outlook.com</li>
+        <li>Phone: +91-7972265855</li>
+        <li>LinkedIn: <a href="https://in.linkedin.com/in/zuber-masalikar-5b099a289" target="_blank">Linkedin</a></li>
       </ul>
     </div>
 
