--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ nav li {
       <ul>
         <li>Email: zuber.masalikar@outlook.com</li>
         <li>Phone: +91-7972265855</li>
-        <li>LinkedIn: <a href="https://in.linkedin.com/in/zuber-masalikar-5b099a289" target="_blank">Linkedin</a></li>
+        <li>LinkedIn: <a href="https://in.linkedin.com/in/zuber-masalikar-5b099a289" target="_blank">https://www.Linkedin.com/ZMasalikar</a></li>
       </ul>
     </div>
 
