--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ Multitasking and coordination have been at the core of my professional journey, 
         <span class="popup-close" id="popup-close">&times;</span>
         <h2>Click on your preferred method</h2>
         <p><a href="https://wa.me/919762699075?text=Hello,%20I%20have%20a%20question%20about%20your%20services" target="_blank">
-    <img src="https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c543.png" alt="WhatsApp" class="image-with-shadow" width="50" height="50">
+    <img src="https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c543.png" class="image-with-shadow" width="50" height="50">
 </a>
 </p>
 
@@ -461,9 +461,9 @@ Multitasking and coordination have been at the core of my professional journey, 
   </div>
 
   <script>
-  // Play sound function
+ 
   function playSound() {
-    var audio = new Audio('click-sound.mp3'); // Replace with your sound URL
+    var audio = new Audio('click-sound.mp3'); 
     audio.play();
   }
 
