--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@ color: #234E70;
 /* Button Container Styles */
 .button-container {
   position: fixed;
-  bottom: 20px; /* Adjust the distance from the bottom as needed */
-  right: 5px; /* Position the buttons at the right side of the screen */
+  bottom: 20px; 
+  right: 5px; 
   display: flex;
   flex-direction: column;
-  align-items: flex-end; /* Align buttons to the right */
+  align-items: flex-end; 
 }
 
 /* Button Styles */
@@ -279,9 +279,9 @@ color:#ff0505;
 .carousel {
     display: flex;
     transition: transform 0.5s ease;
-    width: 200px; /* Occupy the full width of the container */
-    height: 200px; /* Ensure logos maintain their aspect ratio */
-    white-space: nowrap; /* Prevent logos from wrapping to the next line */
+    width: 200px; 
+    height: 200px; 
+    white-space: nowrap; 
 }
 
 /* Style for the carousel items (logos) */
@@ -463,7 +463,7 @@ Multitasking and coordination have been at the core of my professional journey, 
   <script>
  
   function playSound() {
-    var audio = new Audio('click-sound.mp3'); 
+    var audio = new Audio('https://github.com/zmasalikar/zmasalikar.github.io/blob/main/mouse-click-153941.mp3'); 
     audio.play();
   }
 
