--- a/index.html
+++ b/index.html
@@ -463,7 +463,8 @@ Multitasking and coordination have been at the core of my professional journey, 
   <script>
  
   function playSound() {
-    var audio = new Audio('https://github.com/zmasalikar/zmasalikar.github.io/blob/main/mouse-click-153941.mp3'); 
+    var audio = new Audio('https://raw.githubusercontent.com/zmasalikar/zmasalikar.github.io/main/mouse-click-153941.mp3
+'); 
     audio.play();
   }
 
