--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ nav li {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 150px; 
-  height: 150px; 
+  width: 100px; 
+  height: 100px; 
   background-color: #234E70; 
   transition: transform 0.4s ease, width 0.3s ease, height 0.3s ease, box-shadow 0.3s ease;
   position: relative;
@@ -111,7 +111,7 @@ font-size: smaller	;
   color: #333333; 
   padding: 30px; 
   margin: 30px; 
-  max-height: 61vh; 
+  max-height: 65vh; 
   overflow-y: auto; 
   margin-right: 100px; 
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.9);
@@ -239,6 +239,8 @@ box-shadow: 4px 5px 20px 10px #888888;
 .image-with-shadow {
   box-shadow: 4px 5px 20px 0px #888888;
 }
+
+
 </style>
 
 
@@ -256,6 +258,10 @@ box-shadow: 4px 5px 20px 10px #888888;
   <div class="content">
     <h1 style="text-align:center;">Portfolio:</h1>
     <strong><p style="text-align:center;">Software Support Specialist ↑ Team Leader</p></strong><br/>
+
+
+<center><iframe src="https://player.vimeo.com/video/870544794?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="200" height="200" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Portfolio Intro"></iframe></center>
+
     <div class="contact-info">
       <h3>Contact Information:</h3>
       <ul>
@@ -291,7 +297,7 @@ As an experienced professional with a proven track record of delivering exceptio
 </p>
 
 </li>
-
+ 
       <li><strong>Process Improvements:</strong><br>
 
 <p>
@@ -449,6 +455,10 @@ As an experienced professional with a proven track record of delivering exceptio
   carouselItems[currentIndex].style.display = 'block';
 
   setInterval(showNextLogo, 2000);
+
+
+
+
 </script>
 </body>
 </html>
