Update and rename index.html to index1.html

--- a/index1.html
+++ b/index1.html
@@ -275,7 +275,7 @@ box-shadow: 4px 5px 20px 10px #888888;
       <h3>Contact Information:</h3>
       <ul>
         <li>Email: zuber.masalikar@outlook.com</li>
-        <li>Phone: +91-7972265855 / +91-9762699075</li>
+        <li>Phone: +91-9762699075</li>
         <li>LinkedIn: <a href="https://in.linkedin.com/in/zuber-masalikar-5b099a289" target="_blank">https://www.linkedin.com/zuber</a></li>
       </ul>
     </div>
