Update and rename index1.html to index.html
Password Protection added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <script>
+  var password = "yourpassword"; // GiveMeAccessNow123
+  var userInput = prompt("Enter Password:");
+  if (userInput !== password) {
+    document.body.innerHTML = "Access Denied!";
+  }
+</script>
+
+<p>Only authorized users can see this.</p>
+
+
+  
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PE206S3XDJ"></script>
 <script>
